--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Product 1 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-                    <img src="http://static.photos/fashion/640x360/1" alt="Product" class="w-full h-64 object-cover">
+                    <img src="https://imgur.com/a/mQHnGYd" alt="Product" class="w-full h-64 object-cover">
                     <div class="p-4">
                         <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
-                        <p class="text-gray-600 mb-3">متوفر بمقاسات S-XXL</p>
+                        <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
                         <div class="flex justify-between items-center">
-                            <span class="font-bold text-primary">199 درهم</span>
+                            <span class="font-bold text-primary">249 درهم</span>
                             <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
