--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Product 1 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://imgur.com/a/mQHnGYd" alt="Product" class="w-full h-64 object-cover">
+                    <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
                     <div class="p-4">
                         <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
                         <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
