--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">249 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -106,7 +106,7 @@
                         <p class="text-gray-600 mb-3">متوفر بمقاسات S-XL</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">149 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20بلوزة%20مطرزة%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20بلوزة%20مطرزة%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -123,7 +123,7 @@
                         <p class="text-gray-600 mb-3">متوفر بمقاسات 28-38</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">229 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20بنطلون%20جينز%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20بنطلون%20جينز%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -140,7 +140,7 @@
                         <p class="text-gray-600 mb-3">متوفرة بعدة ألوان</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">179 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20حقيبة%20يد%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20حقيبة%20يد%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -198,7 +198,7 @@
                         <p class="text-gray-600 mb-3">متوفر بمقاسات S-XXL</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">249 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20سترة%20كتان%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20سترة%20كتان%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -218,7 +218,7 @@
                         <p class="text-gray-600 mb-3">متوفر بمقاسات XS-L</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">179 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20تنورة%20مطبوعة%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20تنورة%20مطبوعة%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -238,7 +238,7 @@
                         <p class="text-gray-600 mb-3">متوفرة بعدة ألوان</p>
                         <div class="flex justify-between items-center">
                             <span class="font-bold text-primary">99 درهم</span>
-                            <a href="https://wa.me/212600000000?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20أكسسوارات%20شعر%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20أكسسوارات%20شعر%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
                                class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
                                <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
                                اطلب عبر واتساب
@@ -289,7 +289,7 @@
             <p class="text-xl mb-8 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
                 فريق EvyMode متاح لمساعدتك عبر WhatsApp على مدار الساعة
             </p>
-            <a href="https://wa.me/212600000000" 
+            <a href="https://wa.me/212688815053" 
                class="bg-white text-primary px-8 py-3 rounded-full font-bold hover:bg-opacity-90 transition inline-flex items-center" 
                data-aos="fade-up" 
                data-aos-delay="200">
@@ -319,14 +319,14 @@
                                 <i data-feather="mail" class="text-primary mt-1 mr-3"></i>
                                 <div>
                                     <h4 class="font-medium">البريد الإلكتروني</h4>
-                                    <p class="text-gray-600">contact@evymode.com</p>
+                                    <p class="text-gray-600">Betadine189@gmail.com</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i data-feather="phone" class="text-primary mt-1 mr-3"></i>
                                 <div>
                                     <h4 class="font-medium">الهاتف</h4>
-                                    <p class="text-gray-600">+212 600 000 000</p>
+                                    <p class="text-gray-600">+212 688815053</p>
                                 </div>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                             <input type="text" id="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-primary">
                         </div>
                         <div class="mb-4">
-                            <label for="email" class="block text-gray-700 font-medium mb-2">البريد الإلكتروني</label>
+                            <label for="email" class="block text-gray-700 font-medium mb-2">الرقم الهاتف</label>
                             <input type="email" id="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-primary">
                         </div>
                         <div class="mb-4">
@@ -418,7 +418,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/212600000000" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition z-50">
+    <a href="https://wa.me/212688815053" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition z-50">
         <i data-feather="message-circle" class="w-6 h-6"></i>
     </a>
 
