--- a/index.html
+++ b/index.html
@@ -115,105 +115,41 @@
                     </div>
                 </div>
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <!-- Product 1 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
-            <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">249 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
+               <!-- Product 3 -->
+               <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
+                    <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
+                        <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">249 درهم</span>
+                            <a href="https://wa.me/212688815053?text=..."
+                             class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                              <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                             اطلب عبر واتساب
+                         </a>
+                    </div>
+                 </div>
+              </div>
 
-    <!-- Product 2 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/XXXXXXX.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">قفطان مغربي</h3>
-            <p class="text-gray-600 mb-3">متوفر بمقاسات M-XL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">399 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Product 3 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/YYYYYYY.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">جلابة صيفية</h3>
-            <p class="text-gray-600 mb-3">مقاسات S-XXL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">199 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <!-- Product 4 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
-            <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">249 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Product 5 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/XXXXXXX.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">قفطان مغربي</h3>
-            <p class="text-gray-600 mb-3">متوفر بمقاسات M-XL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">399 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Product 6 -->
-    <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition">
-        <img src="https://i.imgur.com/YYYYYYY.jpeg" alt="Product" class="w-full h-64 object-cover">
-        <div class="p-4">
-            <h3 class="font-bold text-lg mb-2">جلابة صيفية</h3>
-            <p class="text-gray-600 mb-3">مقاسات S-XXL</p>
-            <div class="flex justify-between items-center">
-                <span class="font-bold text-primary">199 درهم</span>
-                <a href="https://wa.me/212688815053?text=..."
-                   class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                   اطلب عبر واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-
-                <!-- Product 7 -->
+                 <!-- Product 4 -->
+                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
+                    <img src="http://static.photos/fashion/640x360/3" alt="Product" class="w-full h-64 object-cover">
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">بنطلون جينز</h3>
+                        <p class="text-gray-600 mb-3">متوفر بمقاسات 28-38</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">229 درهم</span>
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20بنطلون%20جينز%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                               اطلب عبر واتساب
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                    
+                <!-- Product 5 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
                     <img src="http://static.photos/fashion/640x360/3" alt="Product" class="w-full h-64 object-cover">
                     <div class="p-4">
@@ -230,7 +166,7 @@
                     </div>
                 </div>
                 
-                <!-- Product 8 -->
+                <!-- Product 6 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="400">
                     <img src="http://static.photos/fashion/640x360/4" alt="Product" class="w-full h-64 object-cover">
                     <div class="p-4">
