--- a/index.html
+++ b/index.html
@@ -317,7 +317,73 @@
             </div>
         </div>
     </section>
-
+           <!-- New Product 4 -->
+                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
+                    <div class="relative">
+                        <img src="http://static.photos/fashion/640x360/9" alt="New Product" class="w-full h-64 object-cover">
+                        <span class="absolute top-4 right-4 bg-accent text-white text-xs px-2 py-1 rounded-full">جديد</span>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">أكسسوارات شعر</h3>
+                        <p class="text-gray-600 mb-3">متوفرة بعدة ألوان</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">99 درهم</span>
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20أكسسوارات%20شعر%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                               اطلب عبر واتساب
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+          <!-- New Product 5 -->
+                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
+                    <div class="relative">
+                        <img src="http://static.photos/fashion/640x360/9" alt="New Product" class="w-full h-64 object-cover">
+                        <span class="absolute top-4 right-4 bg-accent text-white text-xs px-2 py-1 rounded-full">جديد</span>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">أكسسوارات شعر</h3>
+                        <p class="text-gray-600 mb-3">متوفرة بعدة ألوان</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">99 درهم</span>
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20أكسسوارات%20شعر%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                               اطلب عبر واتساب
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+            <!-- New Product 6 -->
+                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
+                    <div class="relative">
+                        <img src="http://static.photos/fashion/640x360/9" alt="New Product" class="w-full h-64 object-cover">
+                        <span class="absolute top-4 right-4 bg-accent text-white text-xs px-2 py-1 rounded-full">جديد</span>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">أكسسوارات شعر</h3>
+                        <p class="text-gray-600 mb-3">متوفرة بعدة ألوان</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">99 درهم</span>
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20أكسسوارات%20شعر%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                               اطلب عبر واتساب
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- About Section -->
     <section id="about" class="py-16 bg-light">
         <div class="container mx-auto px-4">
