--- a/index.html
+++ b/index.html
@@ -219,6 +219,21 @@
             </div>
         </div>
     </section>
+                 <section id="order" class="py-16 bg-gray-100">
+  <h2 class="text-2xl font-bold mb-4 text-center">اطلب منتجك الآن عبر WhatsApp</h2>
+
+  <form id="orderForm" class="max-w-lg mx-auto space-y-4">
+    <input type="text" name="name" placeholder="اسمك" required class="w-full p-2 border rounded">
+    <input type="text" name="phone" placeholder="رقم الهاتف" required class="w-full p-2 border rounded">
+    <input type="text" name="address" placeholder="العنوان" class="w-full p-2 border rounded">
+    <input type="text" name="city" placeholder="المدينة" class="w-full p-2 border rounded">
+    <input type="text" name="product" placeholder="اسم المنتج" required class="w-full p-2 border rounded">
+    <input type="text" name="remark" placeholder="ملاحظات" class="w-full p-2 border rounded">
+    <input type="number" name="quantity" placeholder="الكمية" required class="w-full p-2 border rounded">
+    <input type="text" name="price" placeholder="السعر" class="w-full p-2 border rounded">
+    <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700 transition">اطلب عبر WhatsApp</button>
+  </form>
+</section>
 
     <!-- Collections -->
     <section id="collections" class="py-16 bg-light">
