--- a/index.html
+++ b/index.html
@@ -234,7 +234,27 @@
     <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700 transition">اطلب عبر WhatsApp</button>
   </form>
 </section>
-       
+
+          <script>
+const form = document.getElementById('orderForm');
+form.addEventListener('submit', function(e){
+  e.preventDefault();
+
+  const formData = new FormData(form);
+  const message = `مرحباً! أريد هذا المنتج:
+- المنتج: ${formData.get('product')}
+- الاسم: ${formData.get('name')}
+- رقم الهاتف: ${formData.get('phone')}
+- العنوان: ${formData.get('address')}, ${formData.get('city')}
+- الملاحظات: ${formData.get('remark') || '-'}
+- الكمية: ${formData.get('quantity')}
+- السعر: ${formData.get('price')}`;
+
+  const waLink = `https://wa.me/212688815053?text=${encodeURIComponent(message)}`; // بدل الرقم برقمك
+  window.open(waLink, '_blank');
+});
+</script>
+
 
 
     <!-- Collections -->
