--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="products" class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">منتجاتنا المميزة</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
                 <!-- Product 1 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
                     <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
@@ -218,7 +218,25 @@
                 </div>
             </div>
         </div>
+
+         <!-- Product 9 -->
+                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+                    <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
+                        <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
+                        <div class="flex justify-between items-center">
+                            <span class="font-bold text-primary">249 درهم</span>
+                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+                               اطلب عبر واتساب
+                            </a>
+                        </div>
+                    </div>
+                </div>
     </section>
+    
             <section id="order" class="py-16 bg-gray-100">
   <h2 class="text-2xl font-bold mb-4 text-center">اطلب منتجك الآن عبر WhatsApp</h2>
 
@@ -291,7 +309,7 @@ form.addEventListener('submit', function(e){
     <section id="new-arrivals" class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">وصل حديثاً</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <!-- New Product 1 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
                     <div class="relative">
