--- a/index.html
+++ b/index.html
@@ -81,22 +81,56 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">منتجاتنا المميزة</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
-                <!-- Product 1 -->
-                <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover">
-                    <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
-                        <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
-                        <div class="flex justify-between items-center">
-                            <span class="font-bold text-primary">249 درهم</span>
-                            <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
-                               class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
-                               <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
-                               اطلب عبر واتساب
-                            </a>
-                        </div>
-                    </div>
-                </div>
+               <!-- Product 1 with Image Slider -->
+<div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+  
+  <!-- Image Carousel -->
+  <div class="relative">
+    <img src="https://i.imgur.com/R2hcaKB.jpeg" alt="Product" class="w-full h-64 object-cover product-image active">
+    <img src="https://i.imgur.com/abcd123.jpeg" alt="Product" class="w-full h-64 object-cover product-image hidden">
+    <img src="https://i.imgur.com/efgh456.jpeg" alt="Product" class="w-full h-64 object-cover product-image hidden">
+
+    <!-- Controls -->
+    <button onclick="prevImage(this)" class="absolute left-0 top-1/2 -translate-y-1/2 bg-black bg-opacity-50 text-white px-2 py-1">‹</button>
+    <button onclick="nextImage(this)" class="absolute right-0 top-1/2 -translate-y-1/2 bg-black bg-opacity-50 text-white px-2 py-1">›</button>
+  </div>
+
+  <!-- Product Info -->
+  <div class="p-4">
+    <h3 class="font-bold text-lg mb-2">فستان أنيق</h3>
+    <p class="text-gray-600 mb-3">متوفر بمقاسات L-XXL</p>
+    <div class="flex justify-between items-center">
+      <span class="font-bold text-primary">249 درهم</span>
+      <a href="https://wa.me/212688815053?text=مرحباً%20EvyMode!%20أريد%20هذا%20المنتج:%20فستان%20أنيق%20-%20المقاس:%20-%20اللون:%20-%20الكمية:%20-%20الاسم:%20-%20العنوان:%20-%20الهاتف:" 
+         class="bg-primary text-white px-3 py-2 rounded-full text-sm hover:bg-accent transition flex items-center">
+         <i data-feather="message-circle" class="ml-1 w-4 h-4"></i>
+         اطلب عبر واتساب
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- JavaScript for slider -->
+<script>
+function nextImage(button) {
+  const container = button.closest('.relative');
+  const images = container.querySelectorAll('.product-image');
+  let activeIndex = Array.from(images).findIndex(img => !img.classList.contains('hidden'));
+  images[activeIndex].classList.add('hidden');
+  let nextIndex = (activeIndex + 1) % images.length;
+  images[nextIndex].classList.remove('hidden');
+}
+
+function prevImage(button) {
+  const container = button.closest('.relative');
+  const images = container.querySelectorAll('.product-image');
+  let activeIndex = Array.from(images).findIndex(img => !img.classList.contains('hidden'));
+  images[activeIndex].classList.add('hidden');
+  let prevIndex = (activeIndex - 1 + images.length) % images.length;
+  images[prevIndex].classList.remove('hidden');
+}
+</script>
+
                 
                 <!-- Product 2 -->
                 <div class="bg-light rounded-lg overflow-hidden shadow-md hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
